feature: update the portfolio site.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="content">
             <i class="fa fa-user title" aria-hidden="true"></i>
             <h2 class="title text">Profile</h2>
-            <p>28 years old, graduated in Software Engineering with a general average over 9, he often reads books
+            <p>31 years old, graduated in Software Engineering with a general average over 9,2, he often reads books
                 and scientific articles and believes that the best way to make decisions is through data, with a
                 data-oriented culture being essential for companies and startups. Believes in communication and
                 prefers the truth to be told independently, whether it will hurt or not, because only then can
@@ -49,6 +49,18 @@
                     </div>
                 </li>
                 <li class="personalSkill">
+                    <p>Machine Learning DevOps</p>
+                    <div class="container">
+                        <div class="skills mlops">&nbsp;</div>
+                    </div>
+                </li>
+                <li class="personalSkill">
+                    <p>SQL</p>
+                    <div class="container">
+                        <div class="skills sql">&nbsp;</div>
+                    </div>
+                </li>
+                <li class="personalSkill">
                     <p>Deep Learning</p>
                     <div class="container">
                         <div class="skills dl">&nbsp;</div>
@@ -58,12 +70,6 @@
                     <p>Data Visualization</p>
                     <div class="container">
                         <div class="skills dataviz">&nbsp;</div>
-                    </div>
-                </li>
-                <li class="personalSkill">
-                    <p>SQL</p>
-                    <div class="container">
-                        <div class="skills sql">&nbsp;</div>
                     </div>
                 </li>
                 <li class="personalSkill">
@@ -84,29 +90,28 @@
             <i class="fa fa-certificate title" aria-hidden="true"></i>
             <h2 class="title text">Certificates</h2>
             <ul class="certificates">
-                <h6>COURSERA – ITA COURSES – Instituto Tecnológico
-                    Aeronáutico</h6>
+                <h6>UDACITY</h6>
                 <li class="certificate">
-                    <a href="https://www.coursera.org/account/accomplishments/verify/SRWP3EJWMYNW"
-                       target="_blank" >Object Oriented Java Programming – Jun/2016</a>
+                    <a href="https://confirm.udacity.com/EQU7SVKV"
+                       target="_blank" >Nanodegree Machine Learning DevOps – Set/2022</a>
                 </li>
                 <li class="certificate">
-                    <a href="https://www.coursera.org/account/accomplishments/verify/6HEHBWWVEZA9"
-                       target="_blank" >TDD – Test Driven Development – Alg/2016</a>
+                    <a href="https://confirm.udacity.com/EQU7SVKV"
+                       target="_blank" >Nanodegree Machine Learning Engineer – Mar/2019</a>
                 </li>
                 <li class="certificate">
-                    <a href="https://www.coursera.org/account/accomplishments/verify/EVL4KUC7GT2R"
-                       target="_blank" >Agile Development with Advanced Java – Set/2016</a>
-                </li>
-                <li class="certificate">
-                    <a href="https://www.coursera.org/account/accomplishments/verify/Q4PHAT2QE3JN"
-                       target="_blank" >Principles of Agile Software Development – Mar/2017</a>
-                </li>
-                <li class="certificate">
-                    <a href="https://www.coursera.org/account/accomplishments/verify/Q4PHAT2QE3JN"
-                       target="_blank" >Agile Development with Design Patterns – Mar/2018</a>
+                    <a href="https://confirm.udacity.com/ZJNWAUZN"
+                       target="_blank" >Nanodegree Data Science I – Mar/2018</a>
                 </li>
                 <h6>UDEMY</h6>
+                <li class="certificate">
+                    <a href="https://www.udemy.com/certificate/UC-9013179a-b283-44e3-82b0-3c6f89bc2436/"
+                    target="_blank" > Complete Introduction to AWS QuickSight [2022 Edition] - Aug/2022</a>
+                </li>
+                <li class="certificate">
+                    <a href="https://www.udemy.com/certificate/UC-f667c1ba-1d88-4f65-82ac-56b16d274001/"
+                       target="_blank" > Data Engineer Training: Master Big Data! - Set/2020</a>
+                </li>
                 <li class="certificate">
                     <a href="http://ude.my/UC-2P925IQ8"
                        target="_blank" > Complete Guide to TensorFlow for Deep Learning with Python - May/2019</a>
@@ -131,14 +136,64 @@
                     <a href="https://www.udemy.com/certificate/UC-LLWQD5UV/"
                        target="_blank" >Android / IOS Multiplataform developer with React and Redux – Feb/2018</a>
                 </li>
-                <h6>UDACITY</h6>
+                <h6>ALURA</h6>
                 <li class="certificate">
-                    <a href="https://confirm.udacity.com/EQU7SVKV"
-                       target="_blank" >Nanodegree Machine Learning Engineer – Mar/2019</a>
+                    <a href="https://cursos.alura.com.br/certificate/4897d129-2217-4d44-9a8d-fd68bfe6ade8"
+                    target="_blank" >Agile in Practice: Applied Techniques for Agile Management – Feb/2022</a>
                 </li>
                 <li class="certificate">
-                    <a href="https://confirm.udacity.com/ZJNWAUZN"
-                       target="_blank" >Nanodegree Data Science I – Mar/2018</a>
+                    <a href="https://cursos.alura.com.br/certificate/83862263-90b5-49d9-9615-b45adc259074"
+                    target="_blank" >Digital Mindset: Techniques and skills for remote leadership – Feb/2022</a>
+                </li>
+                <li class="certificate">
+                    <a href="https://cursos.alura.com.br/certificate/1b30c404-9a0f-47cd-8f35-535e7711aa46"
+                    target="_blank" >First Leadership: Learning about the mission and purpose of leading people – Feb/2022</a>
+                </li>
+                <li class="certificate">
+                    <a href="https://cursos.alura.com.br/certificate/f790a9e4-1ea5-42e6-a4d1-b8ae4e178bea"
+                    target="_blank" >Habits in Leadership: Good Practices – Feb/2022</a>
+                </li>
+                <li class="certificate">
+                    <a href="https://cursos.alura.com.br/certificate/2ad406d1-df6c-4f3a-a8fe-f4b13baaeee9"
+                    target="_blank" >Leadership: Management practices and improvements – Feb/2022</a>
+                </li>
+                <li class="certificate">
+                    <a href="https://cursos.alura.com.br/certificate/213854f0-9d7a-42c8-9a51-a3129a739dd7"
+                    target="_blank" >Linear Regression: Advanced Modeling Techniques – Feb/2022</a>
+                </li>
+                <li class="certificate">
+                    <a href="https://cursos.alura.com.br/certificate/92676b7e-9813-4cbf-abd3-0a6765fb8417"
+                    target="_blank" >MLFlow: Life cycle management of ML models – Feb/2022</a>
+                </li>
+                <li class="certificate">
+                    <a href="https://cursos.alura.com.br/certificate/f9fb8768-7e59-451d-9cd1-571c84804652"
+                    target="_blank" >Task Delegation: Get the best out of your team – Feb/2022</a>
+                </li>
+                <li class="certificate">
+                    <a href="https://cursos.alura.com.br/certificate/a53b15c8-022f-43eb-812e-db04a5405daa"
+                    target="_blank" >Teamwork Principles: Collaborative relations – Feb/2022</a>
+                </li>
+                <h6>COURSERA – ITA COURSES – Instituto Tecnológico
+                    Aeronáutico</h6>
+                <li class="certificate">
+                    <a href="https://www.coursera.org/account/accomplishments/verify/SRWP3EJWMYNW"
+                    target="_blank" >Object Oriented Java Programming – Jun/2016</a>
+                </li>
+                <li class="certificate">
+                    <a href="https://www.coursera.org/account/accomplishments/verify/6HEHBWWVEZA9"
+                       target="_blank" >TDD – Test Driven Development – Alg/2016</a>
+                </li>
+                <li class="certificate">
+                    <a href="https://www.coursera.org/account/accomplishments/verify/EVL4KUC7GT2R"
+                       target="_blank" >Agile Development with Advanced Java – Set/2016</a>
+                </li>
+                <li class="certificate">
+                    <a href="https://www.coursera.org/account/accomplishments/verify/Q4PHAT2QE3JN"
+                       target="_blank" >Principles of Agile Software Development – Mar/2017</a>
+                </li>
+                <li class="certificate">
+                    <a href="https://www.coursera.org/account/accomplishments/verify/Q4PHAT2QE3JN"
+                       target="_blank" >Agile Development with Design Patterns – Mar/2018</a>
                 </li>
             </ul>
         </div>
@@ -213,6 +268,40 @@
                 </li>
                 <br>
                 <h5>Supervised Learning</h5>
+                <li>
+                    <a href="https://github.com/Krids/DynamicRiskAssessmentSystem" target="_blank"
+                       class="link_neutro">A Dynamic Risk Assessment System</a><br>
+                    <p>In this project the company asked to create, deploy, and monitor a risk assessment ML model that will estimate the attrition risk of each of the company's 10,000 clients. 
+                        If the model you create and deploy is accurate, it will enable the client managers to contact the clients with the highest risk and avoid losing clients and revenue.</p>
+                </li>
+                <br>
+                <li>
+                    <a href="https://github.com/Krids/CensusBurealClassification" target="_blank"
+                       class="link_neutro">Census Bureal Classification</a><br>
+                    <p>This project is part of Unit 4: Deploying a Scalable ML Pipeline in Production. 
+                        The problem is to build a machine learning application that predicts an employer's annual income more than $50K using the census income dataset from UCI. 
+                        The application is deployed using FastAPI, with CI and CD using Github Actions and Heroku respectively.</p>
+                </li>
+                <br>
+                <li>
+                    <a href="https://github.com/Krids/ShortTermRentalPricesInNYC" target="_blank"
+                       class="link_neutro">Build an ML Pipeline for Short-Term Rental Prices in NYC</a><br>
+                    <p>In this project we are working for a property management company renting rooms 
+                        and properties for short periods of time on various rental platforms. 
+                        So we need to estimate the typical price for a given property based on the price of similar properties. 
+                        The company receives new data in bulk every week. 
+                        The model needs to be retrained with the same cadence, necessitating an end-to-end pipeline that can be reused.</p>
+                </li>
+                <br>
+                <li>
+                    <a href="https://github.com/Krids/PredictCustomerChurn" target="_blank"
+                       class="link_neutro">Predict Customer Churn</a><br>
+                    <p>The Project is aimed at identifying credit card customers who are most likely to churn. 
+                        Machine learning algorithms have been used to achieve this objective. 
+                        PEP8 standard has been followed while writing the Python code. 
+                        Python Codes could be found in the repository along with the testing and logging python script.</p>
+                </li>
+                <br>
                 <li>
                     <a href="https://github.com/Krids/FindingDonorsForCharity" target="_blank"
                        class="link_neutro">Finding Donors For Charity</a><br>
